# iDEA

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
benchmarking/: gpu.py
docs/: conf.py  iDEA.methods.rst  iDEA.rst  requirements.txt
docs/_build/doctrees/: environment.pickle  iDEA.doctree  iDEA.methods.doctree  index.doctree  modules.doctree
docs/_build/html/: .buildinfo  genindex.html  iDEA.html  iDEA.methods.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/iDEA/: interactions.html  methods.html  observables.html  reverse_engineering.html  state.html  system.html  utilities.html
docs/_build/html/_modules/iDEA/methods/: hartree.html  hartree_fock.html  hybrid.html  interacting.html  kssce.html  lda.html  non_interacting.html
iDEA/: __init__.py  observables.py  reverse_engineering.py  state.py  system.py  utilities.py
iDEA/methods/: hartree.py  hartree_fock.py  hybrid.py  interacting.py  kssce.py  lda.py  non_interacting.py
tests/: test_manybody.py  test_time_evolution.py
tutorial/: tutorial.ipynb
