[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"


[tool.ruff]
target-version = "py38"
extend-exclude = ["*.ipynb"]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]
ignore = ["E501", "E741", "E731", "B024"]

[tool.ruff.lint.pep8-naming]
extend-ignore-names = ["iDEA_*"]
